<resources>
    <string name="app_name">EverHorizon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendarFirstDay">"0"</string>
    <string name="info">Info</string>
    <string name="calendar">Calendar</string>
    <string name="map">Map</string>
    <string name="my_trips">My trips</string>
    <string name="where">Where?</string>
    <string name="how">How?</string>
    <string name="cities">Cities</string>
    <string name="countries">Countries</string>
    <string name="plane">By plane</string>
    <string name="train">By train</string>
    <string name="bus">By bus</string>
    <string name="boat">By boat</string>
    <string name="stay">Stay</string>
    <string name="bestCities">The best cities to visit during this time are:</string>
    <string name="infoText">App made for PMDM subject by Diana Ramos Torrado</string>
    <string name="activities">Activities that can be done there:</string>
    <string name="places">Places to visit:</string>
    <string name="typical">Typical food you can try:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="dateSeparation">/</string>
    <string name="transport">Transport:</string>
    <string name="staytxt">Stay:</string>
    <string name="activitiestxt">Activities:</string>
    <string name="notestxt">Notes:</string>
    <string name="notesEditText">Write your note (no more than 3 lines)</string>
    <string name="noTrips">There are no trips planned yet. If you want to plan a trip, select a city in the cities window or a country in the countries window</string>
    <string name="searchCity">Search for a city</string>
    <string name="searchCountry">Search for a country</string>
    <string name="searchCompany">Search for a company</string>
    <string name="Amman">Amman</string>
    <string name="amman_photo">https://i0.wp.com/passporterapp.com/es/blog/wp-content/uploads/2023/06/que-ver-en-amman.jpg?fit=1280%2C719&amp;ssl=1</string>
    <string name="amman_best">Winter</string>
    <string name="amman_country">Jordan</string>
    <string name="amman_description">Amman, the vibrant capital of Jordan, seamlessly fuses the old and the new, creating a cityscape that unfolds across seven hills. Its skyline, adorned with a mix of contemporary structures and historical landmarks, paints a picture of an evolving metropolis. As you navigate its bustling streets, Amman welcomes with an atmosphere shaped by rich cultural nuances and the warmth of its people. The city%apos;s charm lies in the fusion of traditional markets with modern urban life, creating a dynamic setting where ancient history meets a burgeoning cosmopolitan identity. Amman invites exploration, offering a captivating narrative through its streets, neighborhoods, and the distinctive character of its urban landscape.</string>
    <string name="amman_activities1">Explore the Amman Citadel</string>
    <string name="amman_activities2">Tour the Roman Theater</string>
    <string name="amman_activities3">Stroll along Rainbow Street</string>
    <string name="amman_activities4">Visit the Jordan Archaeological Museum</string>
    <string name="amman_activities5">Experience Al-Balad Market</string>
    <string name="amman_activities6">Wander Through Downtown Amman</string>
    <string name="amman_places1">Amman Citadel</string>
    <string name="amman_places2">Roman Theater</string>
    <string name="amman_places3">Rainbow Street</string>
    <string name="amman_places4">Jordan Archaeological Museum</string>
    <string name="amman_places5">King Hussein Mosque</string>
    <string name="amman_places6">Al-Balad Market</string>
    <string name="amman_typical1">Mansaf</string>
    <string name="amman_typical2">Falafel</string>
    <string name="amman_typical3">Kebab</string>
    <string name="amman_typical4">Kunafa</string>
    <string name="amman_languages">Arabic and English</string>
    <string name="amman_latitude"> 31.9516</string>
    <string name="amman_longitude">35.9235</string>
    <string name="Madrid">Madrid</string>
    <string name="madrid_photo">https://hips.hearstapps.com/hmg-prod/images/madrid-03-1537270899.jpg</string>
    <string name="madrid_best">Autumn</string>
    <string name="madrid_country">Spain</string>
    <string name="madrid_description">Madrid, the vibrant capital of Spain, seamlessly fuses the old and the new, creating an urban landscape that unfolds across its multiple neighborhoods. Its skyline, adorned with a mix of contemporary structures and historical landmarks, paints a picture of a vibrant and diverse metropolis. As you navigate its bustling streets, Madrid welcomes you with an atmosphere influenced by rich cultural traditions and the warmth of its people. The city\'s charm lies in the combination of traditional markets with modern urban life, creating a dynamic environment where ancient history meets a cosmopolitan identity in constant evolution. Madrid invites exploration, offering a captivating narrative through its streets, neighborhoods, and the distinctive character of its urban landscape.</string>
    <string name="madrid_activities1">Visit the Prado Museum</string>
    <string name="madrid_activities2">Explore Retiro Park</string>
    <string name="madrid_activities3">Walk along Gran Vía</string>
    <string name="madrid_activities4">Discover the Royal Palace</string>
    <string name="madrid_activities5">Enjoy nightlife in Chueca</string>
    <string name="madrid_activities6">Stroll through Malasaña Neighborhood</string>
    <string name="madrid_places1">Prado Museum</string>
    <string name="madrid_places2">Retiro Park</string>
    <string name="madrid_places3">Gran Vía</string>
    <string name="madrid_places4">Royal Palace</string>
    <string name="madrid_places5">Plaza Mayor</string>
    <string name="madrid_places6">Salamanca Neighborhood</string>
    <string name="madrid_typical1">Calamari Sandwich</string>
    <string name="madrid_typical2">Spanish Omelette</string>
    <string name="madrid_typical3">Churros with Chocolate</string>
    <string name="madrid_typical4">Madrid-style Stew</string>
    <string name="madrid_languages">Spanish and English</string>
    <string name="madrid_latitude">40.4168</string>
    <string name="madrid_longitude">-3.7038</string>
    <string name="NewYork">New York</string>
    <string name="newyork_photo">https://media.admagazine.com/photos/61e5acc706c10ae95c71b902/master/pass/New-York-skyline.jpg</string>
    <string name="newyork_best">Winter</string>
    <string name="newyork_country">United States</string>
    <string name="newyork_description">New York, the bustling metropolis of the United States, stands as a testament to the harmonious blend of the old and the new. Its iconic skyline, adorned with a mix of contemporary skyscrapers and historic landmarks, tells the story of a city that never sleeps. As you navigate the lively streets of New York, you\'ll be embraced by an atmosphere shaped by diverse cultures and the energy of its inhabitants. The city\'s allure lies in the fusion of traditional neighborhoods with the pulse of modern urban life, creating a dynamic tapestry where history and innovation intersect. New York beckons exploration, weaving a narrative through its iconic streets, diverse neighborhoods, and the unique character of its urban landscape.</string>
    <string name="newyork_activities1">Visit Times Square</string>
    <string name="newyork_activities2">Explore Central Park</string>
    <string name="newyork_activities3">Walk across Brooklyn Bridge</string>
    <string name="newyork_activities4">Discover the Metropolitan Museum of Art</string>
    <string name="newyork_activities5">Experience Broadway Shows</string>
    <string name="newyork_activities6">Stroll through Greenwich Village</string>
    <string name="newyork_places1">Times Square</string>
    <string name="newyork_places2">Central Park</string>
    <string name="newyork_places3">Brooklyn Bridge</string>
    <string name="newyork_places4">Metropolitan Museum of Art</string>
    <string name="newyork_places5">Broadway</string>
    <string name="newyork_places6">Greenwich Village</string>
    <string name="newyork_typical1">New York-style Pizza</string>
    <string name="newyork_typical2">Bagels with Lox</string>
    <string name="newyork_typical3">Cheesecake</string>
    <string name="newyork_typical4">Hot Dogs</string>
    <string name="newyork_languages">English</string>
    <string name="newyork_latitude">40.7128</string>
    <string name="newyork_longitude">-74.0060</string>
    <string name="Tokyo">Tokyo</string>
    <string name="tokyo_photo">https://www.gotokyo.org/es/destinations/southern-tokyo/images/499_0354_2.jpg</string>
    <string name="tokyo_best">Spring</string>
    <string name="tokyo_country">Japan</string>
    <string name="tokyo_description">Tokyo, the dynamic capital of Japan, captivates visitors with its seamless blend of tradition and modernity. The city\'s skyline, adorned with a mix of cutting-edge architecture and historic landmarks, unfolds a narrative of a metropolis that constantly evolves. Navigating Tokyo\'s vibrant streets, you\'ll encounter a rich cultural tapestry influenced by centuries-old traditions and the energetic pulse of contemporary life. The charm of the city lies in the coexistence of ancient temples and bustling neon-lit districts, creating an exhilarating atmosphere where the past and the future intersect. Tokyo invites exploration, offering a captivating journey through its diverse neighborhoods, iconic landmarks, and the unique character of its urban landscape.</string>
    <string name="tokyo_activities1">Visit Senso-ji Temple</string>
    <string name="tokyo_activities2">Explore Shibuya Crossing</string>
    <string name="tokyo_activities3">Experience Tsukiji Fish Market</string>
    <string name="tokyo_activities4">Discover Meiji Shrine</string>
    <string name="tokyo_activities5">Enjoy shopping in Harajuku</string>
    <string name="tokyo_activities6">Stroll through Ueno Park</string>
    <string name="tokyo_places1">Senso-ji Temple</string>
    <string name="tokyo_places2">Shibuya Crossing</string>
    <string name="tokyo_places3">Tsukiji Fish Market</string>
    <string name="tokyo_places4">Meiji Shrine</string>
    <string name="tokyo_places5">Harajuku</string>
    <string name="tokyo_places6">Ueno Park</string>
    <string name="tokyo_typical1">Sushi and Sashimi</string>
    <string name="tokyo_typical2">Ramen</string>
    <string name="tokyo_typical3">Matcha-flavored treats</string>
    <string name="tokyo_typical4">Tempura</string>
    <string name="tokyo_languages">Japanese and English</string>
    <string name="tokyo_latitude">35.6895</string>
    <string name="tokyo_longitude">139.6917</string>
    <string name="London">London</string>
    <string name="london_photo">https://www.thesun.co.uk/wp-content/uploads/2023/01/houses-parliament-big-ben-double-780545902.jpg</string>
    <string name="london_best">Summer</string>
    <string name="london_country">United Kingdom</string>
    <string name="london_description">London, the vibrant capital of the United Kingdom, enchants visitors with its timeless blend of history and modernity. The city\'s skyline, adorned with a mix of historic landmarks and contemporary structures, unfolds a narrative of a metropolis that has played a central role in shaping the course of history. As you explore London\'s bustling streets, you\'ll be immersed in a rich cultural tapestry influenced by centuries-old traditions and the pulse of contemporary life. The charm of the city lies in its diverse neighborhoods, iconic landmarks, and the unique character of its urban landscape. London invites exploration, offering a captivating journey through its historic sites, world-class museums, and the dynamic energy of its cosmopolitan atmosphere.</string>
</resources>